--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "typescript-eslint": "^8.35.1"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
+    "http-status": "^2.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.1",
     "zod": "^3.25.74"
