--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,14 @@
-MONGODB_URI=
+MONGODB_URL=
 PORT=5000
-NODE_ENV=development | production
+NODE_ENV=development
+
+#super admin
+SUPER_ADMIN_EMAIL=
+SUPER_ADMIN_PASSWORD=
+
+#bcrypt
+BCRYPT_SALT=
+
+#jwt
+JWT_SECRET=
+JWT_EXPIRE=
